--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -231,7 +231,7 @@ h1 {
     }
 
     .top {
-        gap: 10px;
+        gap: 8px;
         top: 2%;
        }
 
