--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -12,7 +12,7 @@
 }
 
 .top a {
-    @include link-style(black);
+    @include link-style(white);
     font-weight: 600;
     font-size: 20px;
 }
@@ -40,8 +40,8 @@ header p {
 }
 
 .block-link {
-    background-color: black;
-    color: white !important;
+    background-color: white;
+    color: black !important;
     border-radius: 8px;
     padding-left: 24px;
     padding-right: 24px;
@@ -68,7 +68,7 @@ h1 {
 
 
     .top {
-        gap: 10px;
+        gap: 8px;
         top: 2.5%;
        }
     
@@ -93,7 +93,7 @@ h1 {
        header p {
         font-size: $font-p-mobile;
         top: 3%;
-        @include link-style(black);
+        @include link-style(white);
        }
 
        .blog-link {
