--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -252,7 +252,7 @@ footer {
     }
 
     .top {
-        gap: 10px;
+        gap: 8px;
         top: 2.5%;
        }
 
